apps/michaelthomson/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: michaelthomson.dev
  namespace: michaelthomson
  annotations:
    external-dns.alpha.kubernetes.io/target: michaelthomson.ddns.net
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
  - host: michaelthomson.dev
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: michaelthomson
            port: 
              name: http
  tls:
    - hosts:
        - michaelthomson.dev
      secretName: letsencrypt-wildcard-cert-michaelthomson.dev
